--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -60,3 +60,30 @@ body {
   }
 
 }
+
+
+
+.form {
+  text-align: center;
+  border: 1px solid black;
+  border-radius: 20px;
+  max-width: 350px;
+  margin: 0 auto;
+  padding: 15px;
+}
+
+.form>div {
+  margin-bottom: 15px;
+}
+
+.form input {
+  width: 100%;
+  padding: 5px 15px;
+  border: none;
+  border-bottom: 1px solid black;
+}
+
+.title {
+  text-align: center;
+  margin: 15px 0;
+}
