--- a/src/app/calendar/styles.css
+++ b/src/app/calendar/styles.css
@@ -22,7 +22,13 @@
         gap: 100px;
     }
 
+}
 
+.events {
+    background-color: #E2ECF5;
+    border-left: 2px solid #6E9ECF;
+    font-size: 14px;
+    padding: 5px;
 
-
+    margin-left: 20px;
 }
